--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node",
     "day01": "node -- day01",
-    "day02": "node -- day02"
+    "day02": "node -- day02",
+    "day03": "node -- day03"
   },
   "repository": {
     "type": "git",
