--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node",
     "day01": "node -- day01",
     "day02": "node -- day02",
-    "day03": "node -- day03"
+    "day03": "node -- day03",
+    "day04": "node -- day04"
   },
   "repository": {
     "type": "git",
