--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "day01": "node -- day01",
     "day02": "node -- day02",
     "day03": "node -- day03",
-    "day04": "node -- day04"
+    "day04": "node -- day04",
+    "day05": "rm -f ./day05/output.txt && node -- day05"
   },
   "repository": {
     "type": "git",
